--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-11-25  Tom Hacohen
+
+        * Evas textblock: Fixed wrapping of lines ending with whites.
+
 2013-11-25  ChunEon Park (Hermet)
 
         * Evas: Fix proxy render to update the proxies recursively. If a proxy
