--- a/NEWS
+++ b/NEWS
@@ -365,6 +365,7 @@ Fixes:
      - Evas textblock: Fixed order of tags inserted with markup_app/prepend.
      - Fix proxy render to update the proxies recursively. If a proxy has proxies, all the chainged proxies should be updated recursively.
      - Evas textblock: Fixed wrapping of lines ending with whites.
+     - Evas: Fix the memory corruption introduced by evas fonts_zero.
 
     * Ecore:
      - Don't leak fd on exec.
