Revert "Revert "evas: allow fuzziness on the texture format returned by GL.""
This reverts commit 87385b05c3117aa8d46fd4029bfdeadf3444a7b9 that is necessary for desktop target.

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,10 @@
         * ecore anim: Fixed animator not working problem when source_set is
         changed back and forth very fast.
 
+2013-11-26  Cedric Bail
+
+        * Evas: Allow fuzziness on the texture format returned by GL.
+
 2013-11-25  Tom Hacohen
 
         * Evas textblock: Fixed wrapping of lines ending with whites.
